syntax = "proto3";

package Protos.Dto.Carrito.Request;
option csharp_namespace = "TiendaServicios.Contracts.Protos.Dto.Carrito.Request";

message GetAllCarritosSesionRequest
{
}
